# espm

./: .gitignore  .gitmodules  CHANGELOG.rst  CONTRIBUTING.rst  Licence.txt  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  hyperspy_extension.yaml  pyproject.toml  pyproject.toml.bak  readthedoc.yml  setup.py  setup.py.old  todo.md
.github/workflows/: doc.yml  python.yml
Code/: EDXS_model.py  EDXS_table.py  analyze_data.ipynb  analyze_data_script.py  analyze_data_v2.ipynb  analyze_exp_data.py  artificial_data.ipynb  batches.py  cross_validation.py  exp_data_script_config.json  generate_data.py  mu_eps_script_config.json  snmf.py  spectrum_fit.ipynb  utils_V2.py
Code/Data/: Bote2009_lowOV.txt  aspim036_N150_2ptcls_brstlg.hspy  (+17 more)
Notes/: code-structure.drawio  gradient-computations.lyx  model-with-bremstrahlung-call-notes.lyx
doc/: conf.py  index.rst  references.bib
esmpy/: conf.py  dicotomy.py  hyperspy_extension.yaml  measures.py  spectrum_fitting.py  tables_utils.py  updates.py  utils.py
espm/: conf.py  cross_sections_utils.py  ffast_mac.py  hyperspy_extension.yaml  measures.py  spectrum_fitting.py  tables_utils.py  utils.py  weights.py
experiments/: HPC_batch_experiment.py  HPC_single_experiment.py  ICA_script.py  NMF_script.py  VCA_script.py  brg_ab_map.hspy  capv_ab_map.hspy  complex_data_paper.py  conf.py  data_paper.py  data_paper_different_noise.py  experiments.py  fp_ab_map.hspy  generate_synthetic_dataset.py  low_res_experiments.py  low_res_experiments_arrows.py  low_res_experiments_regularization.py  mcrllm_batch.py  mcrllm_script.py  mcrllm_wrapper.py  quick_NMF_script.py  server.py  sunsal.py  test_experiments.py
generated_datasets/: 88_ES-LP_G8_selection2_cropped2.hspy
msc_thesis/: binning.py  convolution.py  datasets.py  estimators.py  nmf_algorithm.py  plotting.py
notebook/: analyze_data_v2.ipynb
notebooks/: AT_testing.ipynb  EDS_spectrum_fitting.ipynb  NMF_testing_toy.ipynb  VCA.py  analyse_exp_data.ipynb  analyse_one_method.ipynb  analyze_data.ipynb  analyze_data_v2.ipynb  api.ipynb  background_fit.ipynb  bremstrahlung.ipynb  convergence-speed.ipynb  convergence.py  dicho_test.ipynb  generate_artificial_data.ipynb  generate_data.ipynb  low_res_experiments.ipynb  make-plots.ipynb  other_algorithms.ipynb  papers_figures.ipynb  read_HPC_data _TEMP.ipynb  read_HPC_data.ipynb  select_spectrum.ipynb  spectrum_fit.ipynb  speedtest.ipynb  surrogate-vs-bregmann.ipynb  synth_data_NMF.ipynb  test_hyperparameters.ipynb  testing.ipynb  testing_div_bregman.ipynb  testing_faster_algo.ipynb  testing_other_algo.ipynb  toy-ML.ipynb  toy-Max.ipynb
pyesm/: conf.py  measures.py  spectrum_fitting.py  tables_utils.py  utils.py
scripts/: HPC_exp_data_single.py  HPC_single_data_analysis.py  HPC_single_experiment.py  HPC_synth_exp.py  HPC_synth_exp_batch.py  HPC_synth_exp_single.py  HPC_synth_exp_single_brg.py  HPC_synth_exp_single_cst_fp.py  NMF_script.py  data_paper.py  experiments.py  gather_files.py  generate_synthetic_dataset.py  single_analysis.run  synthetic_exp.py  synthetic_exp_batch.py
snmfem/: EDXS_model.py  EDXS_table.py  __init__.py  artificial_data.ipynb  conf.py  cross_validation.py  data_analysis.py  datasets.py  exp_data_script_config.json  experiments.py  generate_data.py  generate_weights.py  laplacian.py  measures.py  snmf.py  spectrum_fit.ipynb  spectrum_fitting.py  toy.py  updates.py  utils.py  utils_V2.py
(+227 files in other folders)
