[tool.poetry]
name = "esmpy"
version = "0.1.1"
description = "Electron Spectro-Microscopy Python Library"
authors = ["Adrien Teurtie, Nathanael Perraudin"]
license = "MIT"

[tool.poetry.dependencies]
python = "==3.10"
hyperspy = "^1.7.1"
tqdm = "^4.64.0"
lmfit = "^1.0.3"
scikit-learn = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
jupyterlab = "^3.4.5"
twine = "^4.0.1"
setuptools = "^65.3.0"
wheel = "^0.37.1"
hyperspy-gui-ipywidgets = "^1.5.0"
hyperspy-gui-traitsui = "^1.5.2"
PyQt5 = "^5.15.7"
pysptools = "^0.15.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
