[tool.poetry]
name = "esmpy"
version = "0.1.1"
description = "Electron Spectro-Microscopy Python Library"
authors = ["Adrien Teurtie, Nathanael Perraudin"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0"
hyperspy = "*"
tqdm = "*"
lmfit = "*"
scikit-learn = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
jupyterlab = "*"
twine = "*"
setuptools = "*"
wheel = "*"
hyperspy-gui-ipywidgets = "*"
hyperspy-gui-traitsui = "*"
pysptools = "*"
flake8 = "*"
pylint = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
